# philosophy_app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  chainlit.md  chainlit_ko.md  docker-compose.yml  fusion.py  main.py  mdutil.py  me_page.py  philo_service.py  pyproject.toml  readme.md  reports_store.py  saju_service.py  verify_refactoring.py
.chainlit/: config.toml
docs/: DEPLOY-PORTAINER.md  SPEC.md  index.md  interpretation-pipeline-audit.md  philo.csv  philosophy_matching_sheet.md  question_list.json  schools.md  system_prompt.md
engine/: __init__.py  astro.py  cli.py  compatibility.py  constants.py  daeun.py  i18n.py  interp_types.py  interpret.py  lifelong.py  luck.py  lunar.py  matching.py  narrator.py  pillars.py  presets.py  provenance.py  relations.py  reports.py  scorer.py  sinsal.py  store.py  timeutil.py  tojeong.py  topics.py  tracing.py
legacy/: README_original.md  chainlit_app.py  gradio_app.py  philosophy_example.json  test_sheet.csv  verify_llm.py  verify_refactoring.py
philosophy/: __init__.py  analysis.py  decompose.py  diagnose.py  embed.py  graph.py  matching.py  pipeline.py  retriever.py  schema.py  store.py  values.py
presets/: byeongyak_sinbong.yaml  jeongtong_eokbu.yaml  jeonwang_tonggwan.yaml  johu_centered.yaml  mangpa.yaml  sammyeong_gobeop.yaml  sinpa_dongsaeng.yaml
public/: theme.css  theme.js  theme.json
scripts/: build_philo_embeddings.py  demo_fortune.py  demo_interpret.py  demo_report.py  gen_golden.py  qa_corpus.py  verify_interpretation.py  verify_llm.py
src/: analysis_ui.py  distance.py  (+4 more)
(+55 files in other folders)
